--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,6 +7,7 @@ flake8:
   stage: lint
   image: registry.getnoc.com/infrastructure/noc-lint:master
   script:
+    - set -x
     - FLIST=$(git --no-pager diff --name-only $(git rev-parse --abbrev-ref HEAD) $(git merge-base origin/HEAD HEAD) |egrep -q ".py$" || true)
     - if [ ! -z "$FLIST" ]; then flake8 $FLIST; else true fi
   except:
@@ -19,10 +20,11 @@ radon:
   stage: lint
   image: registry.getnoc.com/infrastructure/noc-lint:master
   script:
+    - set -x
     - FLIST=$(git --no-pager diff --name-only $(git rev-parse --abbrev-ref HEAD) $(git merge-base origin/HEAD HEAD) |egrep -q ".py$" || true)
     - x=0
     #- if [ ! -z $FLIST ]; then xenon --max-absolute B --max-modules B --max-average B  $FLIST; fi
-    - for i in "$FLIST" ; do (xenon --max-absolute B --max-modules B --max-average B $i; let x+=$?); done
+    - if [ ! -z $FLIST ]; for i in "$FLIST" ; do (xenon --max-absolute B --max-modules B --max-average B $i; let x+=$?); done; fi
     - if [ "$x" -gt 0 ] ; then exit 1; fi
   except:
     - microservices
@@ -34,8 +36,9 @@ pylint:
   stage: lint
   image: registry.getnoc.com/infrastructure/noc-lint:master
   script:
+    - set -x
     - FLIST=$(git --no-pager diff --name-only $(git rev-parse --abbrev-ref HEAD) $(git merge-base origin/HEAD HEAD) |egrep -q ".py$" || true)
-    - pylint "$FLIST"
+    - if [ ! -z $FLIST ]; pylint "$FLIST" ; fi
   except:
     - microservices
   tags:
